增加注册活跃设备接口

--- a/Doc/cn/温湿度光照等数据上传流程.md
+++ b/Doc/cn/温湿度光照等数据上传流程.md
@@ -55,3 +55,38 @@
 }
 ```
 
+# 注册活跃设备
+
+注册设备使用json格式
+
+## 接口描述
+
+### /updateData/RegisterActiveDevice
+
+**请求方法**: PUT
+
+**请求头**:
+- `Content-Type`: application/json
+
+**请求示例**:
+```json
+{
+    "type": "register_active_device",
+    "device_name": "客厅加湿器",
+    "device_location": "客厅角落",
+    "device_ipv4": "192.168.1.100",
+    "device_port": 8080
+}
+```
+
+**响应参数**:
+- `status` (string): 请求状态, 如 "success" 或 "error"
+- `device_id` (string): 设备唯一标识符
+
+**响应示例**:
+```json
+{
+    "status": "success",
+    "device_id": "device_01"
+}
+```
