更新了文档和系统管理器代码，主要修改内容如下：
1. 更新了 `Doc/cn/温湿度光照等数据上传流程.md` 文件，增加了心跳数据上传的接口描述和示例。
2. 更新了 `src/back/app.py` 文件，增加了注册活跃设备和心跳数据处理的接口。
3. 更新了 `src/back/system_src/system_manger.py` 文件，增加了注册活跃设备和处理心跳数据的功能。

具体修改如下：
- `Doc/cn/温湿度光照等数据上传流程.md`:
  - 增加了 `/updateData/HeartbeatData` 接口的描述和示例。
  - 增加了 `/updateData/RegisterActiveDevice` 接口的描述和示例。

- `src/back/app.py`:
  - 增加了 `/updateData/RegisterActiveDevice` 接口，用于注册活跃设备。
  - 增加了 `/updateData/HeartbeatData` 接口，用于处理心跳数据。

- `src/back/system_src/system_manger.py`:
  - 增加了 `register_active_device` 方法，用于注册活跃设备。
  - 增加了 `input_device_heartbeat` 方法，用于处理心跳数据。
  - 增加了 `_check_and_get_device_id` 方法，用于检查设备是否已添加到数据库并得到设备ID。
  - 增加了 `_process_heartbeat_data` 方法，用于处理心跳数据。

--- a/Doc/cn/温湿度光照等数据上传流程.md
+++ b/Doc/cn/温湿度光照等数据上传流程.md
@@ -1,10 +1,10 @@
 # 实时数据包含属性
 
-数据上传采用JSON格式,具体结构如下:
+心跳数据上传采用JSON格式,具体结构如下:
 
 ## 接口描述
 
-### /updateData/RealData
+### /updateData/HeartbeatData
 
 **请求方法**: PUT
 
